--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
-
-    <title>teste</title>
+    <title>Cadastro</title>
 </head>
 <body>
- <h1> abc </h1>
+    <h1>Cadastro</h1>
 </body>
 </html>
