--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="shortcut icon" href="/assets/img/icone.png" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-
-    <title>teste</title>
-</head>
-<body>
- <h1> abc </h1>
-</body>
+    <title>BlockBuster</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="">
+          <img id="logo" src="/assets/img/logo.png" alt="/" />
+        </a>
+        <a class="nav" id="home" id="home" href="/">HOME</a>
+        <a class="nav" id="shop" href="/shop">SHOP</a>
+        <a class="nav" id="cadastro" href="/cadastrar">CADASTRO</a>
+        <a class="nav" id="login" href="/login">LOGIN</a>
+      </nav>
+    </header>
+  </body>
 </html>
