feat: add views

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,11 +13,11 @@
     <header>
       <nav>
         <a href="">
-          <img id="logo" src="/assets/img/logo.png" alt="/" />
+          <img id="logo" src="assets/img/logo.png" alt="/" />
         </a>
         <a class="nav" id="home" id="home" href="/">HOME</a>
-        <a class="nav" id="shop" href="/shop">SHOP</a>
-        <a class="nav" id="cadastro" href="/cadastrar">CADASTRO</a>
+        <a class="nav" id="shop" href="/signUp">SIGNUP</a>
+        <a class="nav" id="cadastro" href="/cadastro">CADASTRO</a>
         <a class="nav" id="login" href="/login">LOGIN</a>
       </nav>
     </header>
