--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="shortcut icon" href="assets/img/icone.png" />
-
     <title>BlockBuster</title>
   </head>
   <body>
@@ -16,10 +15,12 @@
           <img id="logo" src="assets/img/logo.png" alt="/" />
         </a>
         <a class="nav" id="home" id="home" href="/">HOME</a>
-        <a class="nav" id="shop" href="/signUp">SIGNUP</a>
         <a class="nav" id="cadastro" href="/cadastro">CADASTRO</a>
+        <a class="nav" id="shop" href="/signUp">SIGNUP</a>
         <a class="nav" id="login" href="/login">LOGIN</a>
       </nav>
     </header>
+    <img id="capa" src="assets/img/capa.jpg" alt="/">
+    <h1>Home</h1>
   </body>
 </html>
