--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ nav {
 }
 
 #logo {
-  width: 80%;
+  width: 30rem;
   margin-left: 15%;
 }
 
@@ -49,6 +49,19 @@ nav {
   margin-right: 5%;
 }
 
+#capa{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+h1{
+  text-align: left;
+  margin: 3%;
+  font-size: 4rem;
+  color: rgb(14, 63, 169);
+  text-decoration: underline;
+  text-decoration-color: rgb(255, 169, 3);
+}
 
 @media(max-width: 900px){
     #logo{
