--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,12 @@
         </a>
         <a class="nav" id="home" id="home" href="/">HOME</a>
         <a class="nav" id="cadastro" href="/cadastro">CADASTRO</a>
-        <a class="nav" id="shop" href="/signUp">SIGNUP</a>
         <a class="nav" id="login" href="/login">LOGIN</a>
       </nav>
     </header>
+    <main>
     <img id="capa" src="assets/img/capa.jpg" alt="/">
     <h1>Home</h1>
+    </main>
   </body>
 </html>
