--- a/views/lista.ejs
+++ b/views/lista.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="shortcut icon" href="assets/img/icone.png" />
-    <title>SignUp</title>
+    <title>Login</title>
   </head>
   <body>
     <header>
@@ -16,10 +16,17 @@
         </a>
         <a class="nav" id="home" id="home" href="/">HOME</a>
         <a class="nav" id="cadastro" href="/cadastro">CADASTRO</a>
-        <a class="nav" id="shop" href="/signUp">SIGNUP</a>
-        <a class="nav" id="login" href="/login">LOGIN</a>
+        <a class="nav" id="detalhes" href="/detalhes">DETALHES</a>
+        <a class="nav" id="lista" href="/lista">LISTA</a>
       </nav>
     </header>
-    <h1>Cadastro do Cliente</h1>
+    <h1>Veja aqui todos os filmes</h1>
+
+  
+
+    <footer>
+      <p>Projeto3 modulo2 - 2022</p>
+  </footer>
+  
   </body>
 </html>
