--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -16,10 +16,17 @@
         </a>
         <a class="nav" id="home" id="home" href="/">HOME</a>
         <a class="nav" id="cadastro" href="/cadastro">CADASTRO</a>
-        <a class="nav" id="shop" href="/signUp">SIGNUP</a>
-        <a class="nav" id="login" href="/login">LOGIN</a>
+        <a class="nav" id="detalhes" href="/detalhes">DETALHES</a>
+        <a class="nav" id="lista" href="/lista">LISTA</a>
       </nav>
     </header>
-    <h1>Entrar</h1>
+    <h1>Veja aqui os detalhes do filme</h1>
+
+  
+
+    <footer>
+      <p>Projeto3 modulo2 - 2022</p>
+  </footer>
+  
   </body>
 </html>
