--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,14 +13,19 @@
       <nav>
         <a href="">
           <img id="logo" src="assets/img/logo.png" alt="/" />
-        </a>
+        </a>        
         <a class="nav" id="home" id="home" href="/">HOME</a>
         <a class="nav" id="cadastro" href="/cadastro">CADASTRO</a>
-        <a class="nav" id="shop" href="/signUp">SIGNUP</a>
-        <a class="nav" id="login" href="/login">LOGIN</a>
+        <a class="nav" id="detalhes" href="/detalhes">DETALHES</a>
+        <a class="nav" id="lista" href="/lista">LISTA</a>
       </nav>
     </header>
-    <img id="capa" src="assets/img/capa.jpg" alt="/">
+    <img id="capa" src="" alt="/">
     <h1>Home</h1>
+
+    <footer>
+      <p>Projeto3 modulo2 - 2022</p>
+  </footer>
+ 
   </body>
 </html>
