--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -22,7 +22,23 @@
     </header>
     <h1>Veja aqui os detalhes do filme</h1>
 
-  
+    <main>
+      <section id="detalhes">
+
+              <img src="<%= filme.imagem %>" alt="">
+      
+
+          <div class="item texto">
+              <h2><%= filme.nome %></h2>
+              <p><%= filme.descricao %></p>
+              <a href="/editar/<%= filme.id %>">editar</a>
+              <a href="/deletar/<%= filme.id %>">excluir</a>
+          </div>
+          
+      </section>
+  </main>
+
+
 
     <footer>
       <p>Projeto3 modulo2 - 2022</p>
