--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -28,12 +28,12 @@
               <img src="<%= filme.imagem %>" alt="">
       
 
-          <div class="item texto">
+          <section class="item texto">
               <h2><%= filme.nome %></h2>
               <p><%= filme.descricao %></p>
               <a href="/editar/<%= filme.id %>">editar</a>
               <a href="/deletar/<%= filme.id %>">excluir</a>
-          </div>
+          </section>
           
       </section>
   </main>
