--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
           <img id="logo" src="assets/img/logo.png" alt="/" />
         </a>        
         <a class="nav" id="home" id="home" href="/">HOME</a>
-        <a class="nav" id="cadastro" href="/cadastro">CADASTRO</a>
+        <a class="nav" id="cadastro" href="/criar">CADASTRO</a>
         <a class="nav" id="detalhes" href="/detalhes">DETALHES</a>
         <a class="nav" id="lista" href="/lista">LISTA</a>
       </nav>
