--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -13,11 +13,10 @@
       <nav>
         <a href="">
           <img id="logo" src="assets/img/logo.png" alt="/" />
-        </a>        
+        </a>
         <a class="nav" id="home" id="home" href="/">HOME</a>
-        <a class="nav" id="cadastro" href="/criar">CADASTRO</a>
-        <a class="nav" id="detalhes" href="/detalhes">DETALHES</a>
-        <a class="nav" id="lista" href="/lista">LISTA</a>
+        <a class="nav" id="cadastro" href="/cadastro">CADASTRO</a>
+        <a class="nav" id="login" href="/login">LOGIN</a>
       </nav>
     </header>
     <main>
