--- a/views/lista.ejs
+++ b/views/lista.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="shortcut icon" href="assets/img/icone.png" />
-    <title>Login</title>
+    <title>Lista</title>
   </head>
   <body>
     <header>
