--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,11 @@ main{
   padding: 4vh;
 }
 
+.card a{
+  display: flex;
+  justify-content: center;
+}
+
 #img{
   width: 70%;
   margin: 2vh;
@@ -272,9 +277,10 @@ footer p {
   padding-bottom: 5vh;
   align-items: center;
   padding-top: 5vh;
-  background-color: rgb(0, 0, 0);
-  color: white;
+  background-color: rgb(14, 63, 169);
+  color: rgb(255, 169, 3);
   text-align: center;
+  font-size: 2vh;
 }
 
 /*-----------------------Responsividade--------------------*/
