--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -21,6 +21,15 @@
         <label for="descricao">Descrição:</label>
         <input type="text" name="descricao" id="descricao" required />
 
+        <label for="autor">Autor:</label>
+        <input type="text" name="autor" id="autor" required />
+
+        <label for="genero">Genêro:</label>
+        <input type="text" name="genero" id="genero" required />
+    
+        <label for="anoLancamento">Ano Lançamento:</label>
+        <input type="text" name="anoLancamento" id="anoLancamento" required />
+
         <button type="submit">CADASTRAR</button>
       </form>
     </section>
