--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <%- include('./nav') %>
-
+<!--
     <main>
       <div class="container">
           <div class="item">
@@ -14,10 +14,14 @@
           <div class="item texto">
               <h2><%= filme.nome %></h2>
               <p><%= filme.descricao %></p>
+              <p><%= filme.diretor%></p>
+              <p><%= filme.ano %></p>
+              <p><%= filme.genero %></p>
+
           </div>
       </div>
   </main>
-
+-->
     <%- include('./footer') %>
   </body>
 </html>
